--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
         <module>webmagic-selenium</module>
         <module>webmagic-saxon</module>
         <module>webmagic-samples</module>
+        <module>webmagic-lee</module>
     </modules>
 
     <dependencyManagement>
